compiler/acton/test/syntaxerrors/err6.act
def f(X):
    a = 2
    return X+a
